--- a/mygames/package.json
+++ b/mygames/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^2.1.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/mongoose": "^5.11.97",
     "@types/next-auth": "^3.15.0",
