--- a/mygames/package.json
+++ b/mygames/package.json
@@ -11,15 +11,18 @@
   "dependencies": {
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
+    "@reduxjs/toolkit": "^2.2.5",
     "@types/bcryptjs": "^2.4.6",
     "@types/mongoose": "^5.11.97",
     "@types/next-auth": "^3.15.0",
+    "@types/react-redux": "^7.1.33",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.4.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
