--- a/mygames/package.json
+++ b/mygames/package.json
@@ -16,13 +16,15 @@
     "@types/mongoose": "^5.11.97",
     "@types/next-auth": "^3.15.0",
     "@types/react-redux": "^7.1.33",
+    "@types/redux-persist": "^4.3.1",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.4.0",
-    "next": "14.2.3",
-    "next-auth": "^4.24.7",
+    "next": "^14.2.15",
+    "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
